[gd_scene load_steps=4 format=3 uid="uid://nbau22r6skjy"]

[ext_resource type="Script" path="res://scripts/spells/FireballProjectile.gd" id="1_3bhrs"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_tykyu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_53ftx"]
radius = 1.0

[node name="FireballProjectile" type="Area2D"]
scale = Vector2(5, 5)
script = ExtResource("1_3bhrs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_tykyu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_53ftx")

[node name="Lifetime" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
